--- a/Question 1/res/css/style.css
+++ b/Question 1/res/css/style.css
@@ -5,11 +5,6 @@
 :root {
   font-size: 18px;
   font-family: "Calibri";
-  --navbar-topMenu: #AAB7B8;
-  --navbar-topMenu-active: #2980B9;
-  --primary: #AAB7B8;
-  --darker: #808B96;
-  --secondary: #99A3A4;
 }
 
 /* DIRECT ELEMENT STYLING */
@@ -18,7 +13,7 @@ body, html {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: lightgray;
+  background-color: #868787;
 }
 
 main {
@@ -65,15 +60,17 @@ table {
 }
 
 thead tr {
-  background-color: var(--darker);
+  background-color: #A6ADB5;
 }
 
 tr {
-  background-color: var(--primary);
+  background-color: #AAB7B8;
+  border: 1px solid black !important;
 }
 
 tr:nth-child(2n) {
-  background-color: var(--secondary);
+  background-color: #99A3A4;
+  border: 1px solid black !important;
 }
 
 th {
@@ -188,13 +185,51 @@ td>img {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
+#create-news
+{
+  margin-top: 1rem;
+}
+
+#header-addwalk
+{
+  margin: 0 0 0 15rem;
+  padding: 1rem 2.5rem;
+  padding-bottom: 0;
+  height: 25%;
+}
+
+#header-login
+{
+  height: 35%;
+  padding: 1rem 2.5rem;
+}
 
 /* CLASS STYLING */
+
+.banner
+{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: 100% 100%;
+  background-image: url(../imgs/imageWideLargeRectangle.jpg);
+}
+
+.section-content
+{
+  display:flex;
+  flex-direction: column;
+  background-color: #BBB;
+  padding: .5rem 1rem;
+}
+
 .profileContent {
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-row-gap: 1rem;
-  background-color: var(--primary);
+  background-color: #AAB7B8;
   padding: 10px;
 }
 
@@ -256,7 +291,7 @@ td>img {
 .event {
   display: flex;
   flex-direction: column;
-  background-color: white;
+  background-color: #AAB7B8;
 }
 
 .event-selected {
@@ -312,7 +347,7 @@ td>img {
 }
 
 .event:nth-child(2n) {
-  background-color: gray;
+  background-color: #99A3A4;
 }
 
 .event-contents {
@@ -380,7 +415,7 @@ td>img {
 }
 
 .section-footer {
-  background-color: var(--navbar-topMenu-active);
+  background-color: #BBC5C6;
   border-radius: 0 0 10px 10px;
   padding: .25rem;
 }
@@ -420,12 +455,11 @@ td>img {
 }
 
 .information {
-  background-color: var(--primary);
+  background-color: #AAB7B8;
 }
 
 .profileInformation {
   max-width: 100%;
-  grid-row: 0 / -1;
   max-height: 100%;
   display: flex;
   flex-direction: column;
@@ -449,14 +483,14 @@ td>img {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--primary);
+  background-color: #AAB7B8;
 }
 
 .content-vertical {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--primary);
+  background-color: #AAB7B8;
   /* padding: 10px; */
   overflow-y: auto;
 }
@@ -467,7 +501,7 @@ td>img {
 
 .section-header {
   border-radius: 10px 10px 0 0;
-  background-color: var(--navbar-topMenu-active);
+  background-color: #BBC5C6;
   padding: 15px 1rem;
 }
 
@@ -505,10 +539,6 @@ td>img {
   display: flex;
   flex-direction: column;
   background-color: #BBB;
-}
-
-.banner {
-  padding: .25rem;
 }
 
 .column {
@@ -569,7 +599,7 @@ button, .btn {
 }
 
 button:hover, .btn:hover, button:focus, .btn:focus {
-  filter: brightness(110%);
+  filter: brightness(90%);
   border: none;
   outline: none;
 }
@@ -601,10 +631,9 @@ button:hover, .btn:hover, button:focus, .btn:focus {
   padding: 0;
   margin: 0;
   background: none;
-  transition: transform 250ms;
 }
 
-.btn-chevron:hover {
+.btn-chevron:hover, .btn-chevron:focus {
   transform: rotate(180deg);
 }
 
@@ -668,8 +697,6 @@ button:hover, .btn:hover, button:focus, .btn:focus {
 }
 
 .input-group select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
   cursor: pointer;
   background-color: white;
   height: 100%;
@@ -722,7 +749,7 @@ button:hover, .btn:hover, button:focus, .btn:focus {
   padding: 0;
   height: 100vh;
   width: 15rem;
-  background-color: #1F618D;
+  background-color: #9BA0A1;
   position: fixed;
 }
 
@@ -737,7 +764,7 @@ button:hover, .btn:hover, button:focus, .btn:focus {
 }
 
 .nav-logo {
-  padding: 5px 0;
+  padding: .5rem;
 }
 
 .nav-bottom {
@@ -750,15 +777,15 @@ button:hover, .btn:hover, button:focus, .btn:focus {
 }
 
 .nav-item:hover {
-  background-color: #1A5276;
+  background-color: #82898A;
 }
 
 .nav-item-active {
-  background-color: #1A5276;
+  background-color: #82898A;
 }
 
 .nav-subitem-active {
-  background-color: #154360;
+  background-color: #757B7C;
 }
 
 .nav-link {
@@ -770,7 +797,7 @@ button:hover, .btn:hover, button:focus, .btn:focus {
 
 .nav-link span {
   padding: 0 .75rem;
-  color: white;
+  color: black;
 }
 
 .navbar-topMenu {
@@ -788,7 +815,7 @@ button:hover, .btn:hover, button:focus, .btn:focus {
 }
 
 .nav-dropdown>.nav-item:hover {
-  background-color: #154360;
+  background-color: #757B7C;
 }
 
 .nav-topMenu ul>li>a {
